Fix 12 topic files - remove fabricated content, fix errors
jdbc: Removed fabricated JDK 26 sharding, fixed ConnectionBuilder code
logging: Fixed broken link, variable name, timeline
exceptions: Removed fabricated "pattern matching exceptions" for JDK 20/21
string: Removed unverifiable JDK 25/26 features, duplicate sections
serialization: Removed unrelated Switch/PatternMatching content, wrong contributor
collections: Fixed Map under Collection hierarchy (Map doesn't extend Collection)
classfile: Fixed MethodTypeDesc.of -> MethodTypeDesc.ofDescriptor
reflection: Removed fabricated "Mirror API" for JDK 26
math: Fixed StrictMath version (JDK 1.2 not 5), Math.round return type
nio: Removed misplaced Panama section, updated to JDK 26
i18n: Fixed deprecated Locale constructor, added Locale.of()
datetime: Removed fabricated performance numbers, fixed duplicate sections

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>